# skybox_converter_rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/: pull_request_template.md  release.yml
.github/workflows/: ci.yml  release..yml
src/: error.rs  image_utils.rs  lib.rs  main.rs  math.rs  paths.rs
src/codecs/: exr.rs  mod.rs  png.rs  tonemap.rs
src/layouts/: cross.rs  mod.rs  separate.rs  strip.rs
