[package]
name = "eq2c"
version = "0.1.3-alpha"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
glam = "0.30.9"
image = { version = "0.25.9", features = ["hdr", "exr"] }
rayon = "1.11.0"
thiserror = "2.0.17"

[profile.release]
# debug = 1
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
